--- a/style.css
+++ b/style.css
@@ -76,3 +76,29 @@ a {
     font-size: 18px;
     color: #E5E7EB;
 }
+
+.content-container {
+    text-align: center;
+    padding: 16px;
+    flex: 1 1 auto;
+}
+
+.cards-container {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    margin: 16px;
+}
+
+.content-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    flex: 0;
+    gap: 8px;
+}
+
+.content-card img {
+    border: 1px solid #3882F6;
+}
