--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
 body {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
 
 .header-container,
@@ -20,6 +21,22 @@ body {
 
 .quote-container {
     background-color: #E5E7EB;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 32px;
+}
+
+.quote,
+.author {
+    color: #1F2937;
+    font-size: 36px;
+    font-style: light italic;
+}
+
+.author {
+    font-weight: 900;
 }
 
 button,
@@ -71,6 +88,12 @@ h1 {
     color: #F9FAF8;
 }
 
+h2 {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
 .header-p,
 a {
     font-size: 18px;
@@ -78,9 +101,12 @@ a {
 }
 
 .content-container {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 16px;
-    flex: 1 1 auto;
+    flex: 1;
 }
 
 .cards-container {
@@ -102,3 +128,4 @@ a {
 .content-card img {
     border: 1px solid #3882F6;
 }
+
