--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ button {
     padding: 8px;
     border-radius: 15px;
     border: 0;
+    color: #E5E7EB;
 }
 
 ul {
@@ -129,3 +130,37 @@ a {
     border: 1px solid #3882F6;
 }
 
+.signup-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px;
+}
+
+.signup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px;
+    border-radius: 15px;
+    gap: 16px;
+}
+
+.signup button {
+    border: 1px solid #E5E7EB;
+}
+
+.signup p {
+    color: #E5E7EB;
+}
+
+#bigger-p {
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.footer-container {
+    text-align: center;
+    padding: 16px;
+    color: #F9FAF8;
+}
